tests/testing_data/anonymized_testing_data/invalid_data/invalid_fields/invalidEchoTime.dcm
version https://git-lfs.github.com/spec/v1
oid sha256:d32ba62eef6c7544b06dc1c2343692cfc6f0b86f61b2d92fda090585208448cf
size 64868
